// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exportProgressReducer should initialize to a state of not started 1`] = `
Object {
  "exportedPath": null,
  "state": "NOT_STARTED",
  "status": "",
}
`;

exports[`exportProgressReducer should reflect current status when there is progress 1`] = `
Object {
  "exportedPath": null,
  "state": "IN_PROGRESS",
  "status": "working...",
}
`;

exports[`exportProgressReducer should reset when the export is cancelled 1`] = `
Object {
  "exportedPath": null,
  "state": "NOT_STARTED",
  "status": "",
}
`;

exports[`exportProgressReducer should support an error state 1`] = `
Object {
  "exportedPath": null,
  "state": "COMPLETE_ERROR",
  "status": "something went wrong",
}
`;

exports[`exportProgressReducer should support complete state with path 1`] = `
Object {
  "exportedPath": "/dev/null",
  "state": "COMPLETE_SUCCESS",
  "status": "Your themes have been exported to /dev/null",
}
`;
